5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1646_652.log
== TEST (2019-04-09 16:44:43) 
-- CODE:
n=int(input("numero interio:"))

n3=m//100%10

print(n3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    n3=m//100%10
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:44:55) 
-- CODE:
n=int(input("numero interio:"))

n3=n//100%10

print(n3)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:46:13) 
-- CODE:
n=int(input("numero interio:"))

n3=n//100%10

if(n3%n):
	i="SIM"
else:
	i="NAO"
print(i)

-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:46:19) 
-- CODE:
n=int(input("numero interio:"))

n3=n//100%10

if(n3%n):
	i="SIM"
else:
	i="NAO"
print(i)

-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:46:22) 
-- CODE:
n=int(input("numero interio:"))

n3=n//100%10

if(n3%n):
	i="SIM"
else:
	i="NAO"
print(i)

-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:46:47) 
-- CODE:
n=int(input("numero interio:"))

n3=n//100%10

if(n3%n):
	i="NAO"
else:
	i="SIM"
print(i)

-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:51:40) 
-- CODE:
n=int(input("numero interio:"))

n3=n//100%10
n=n3
n=n1
print(n)
if(%n):
	i="SIM"
else:
	i="NAO"
print(i)

-- ERROR:
File "XXXX", line 7
    if(%n):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:51:59) 
-- CODE:
n=int(input("numero interio:"))

n3=n//100%10
n=n3
n=n1
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    n=n1
NameError: name 'n1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:52:09) 
-- CODE:
n=int(input("numero interio:"))

n3=n//100%10
n=n3
n
print(n)


-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:53:43) 
-- CODE:
n=int(input("numero interio:"))

n3=n//10


print(n)


-- OUTPUT:
728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:53:51) 
-- CODE:
n=int(input("numero interio:"))

n3=n//10


print(n3)


-- OUTPUT:
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:54:29) 
-- CODE:
n=int(input("numero interio:"))

n3=n%10


print(n3)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:54:58) 
-- CODE:
n=int(input("numero interio:"))

n3=n//100	


print(n3)


-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:56:49) 
-- CODE:
n=int(input("numero interio:"))

n3=n//100%n


print(n3)


-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:57:12) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//10


print(n3)


-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:57:20) 
-- CODE:
n=int(input("numero interio:"))

n3=n%10//10


print(n3)


-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:57:33) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1


print(n3)


-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:58:13) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3%n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:58:19) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3%n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:58:29) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n%n3):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:00:09) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n//n3):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:00:34) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n%2):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:00:37) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n%2):
	i="SIM"
else:
	i="NAO"
print(i)


-- EXECUTION TIME:
0.122581
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:00:39) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n%2):
	i="SIM"
else:
	i="NAO"
print(i)


-- EXECUTION TIME:
0.12111
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:00:40) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n%2):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:00:48) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3%2):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:00:51) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3%2):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:02:15) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3%n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:02:19) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3%n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:15:19) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3%n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:15:24) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3%n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:15:33) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3%n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:15:49) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1
print(n3)
if(n3%n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
28
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:16:06) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1
print(n3)
if(n3/n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
28
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:18:32) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3==n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:18:32) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3==n):
	i="SIM"
else:
	i="NAO"
print(i)


-- EXECUTION TIME:
0.151004
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:20:28) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3==n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:21:17) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3==n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:21:22) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3==n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:21:26) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3==n):
	i="SIM"
else:
	i="NAO"
print(i)


-- EXECUTION TIME:
0.194691
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:21:29) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3==n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:21:33) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3==n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:21:35) 
-- CODE:
n=int(input("numero interio:"))

n3=n%100//1

if(n3==n):
	i="SIM"
else:
	i="NAO"
print(i)


-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:23:18) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1

if(n2!=n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:23:21) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1

if(n2!=n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:23:25) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1

if(n2!=n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:23:28) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1

if(n2!=n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:23:36) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1

if(n2!n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- ERROR:
File "XXXX", line 4
    if(n2!n):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:23:48) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1

if(n2<n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:23:55) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1

if(n2<n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:23:57) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1

if(n2<n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:24:00) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1

if(n2<n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:24:06) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1

if(n2%n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:24:09) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1

if(n2%n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:24:16) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1

if(n2%n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:24:18) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1

if(n2%n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:24:56) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2%n
if(n=n3):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- ERROR:
File "XXXX", line 4
    if(n=n3):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:25:01) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2%n
if(n==n3):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:25:08) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2%n
if(n==n3):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:25:16) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n%n2
if(n==n3):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:25:19) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n%n2
if(n==n3):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:25:31) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n//n2
if(n==n3):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:25:36) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n//n2
if(n==n3):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:25:43) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n//n2
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:29:00) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n%n2
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:29:12) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n%n2
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:29:16) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n%n2
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:29:20) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n%n2
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:29:25) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n%n2
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:29:35) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n%n2
if(n3!=n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:29:39) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n%n2
if(n3!=n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:31:24) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*3
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:31:30) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*3
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:31:34) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*3
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:32:00) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*n
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:32:15) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*2
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:32:19) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*2
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:32:25) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*2
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:32:29) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*2
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:32:55) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*n%100//1
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:33:00) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*n%100//1
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:33:05) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*n%100//1
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:33:18) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*n%100//1
if(n3==n2):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:33:23) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*n%100//1
if(n3==n2):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:33:39) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*3
if(n3==n2):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- EXECUTION TIME:
0.190821
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:33:42) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*3
if(n3==n2):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:33:49) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*3
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:33:53) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
n3=n2*3
if(n3==n):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- EXECUTION TIME:
0.163541
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:28) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
if(n2%n==0):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:40) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
if(n%n2==0):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:45) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
if(n%n2==0):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:35:51) 
-- CODE:
n=int(input("numero interio:"))
n2=n%100//1
if(n%n2==0):
	i="SIM"
else:
	i="NAO"
	
print(i)
-- EXECUTION TIME:
0.196575
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
